Added proxy configuration for development server Fixed routing

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar role="heading">
-  <img src="../../../assets/graphics/acc-logo-header.png" alt="ACC Logo" class="logo">
+  <img src="../../../assets/graphics/acc-logo-header.png" alt="Game-Radar Logo" class="logo">
 
   <nav mat-tab-nav-bar>
     <a mat-tab-link *ngFor="let item of tabNavItems"
