Replaced header logo Replaced login and setup page background

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar role="heading">
-  <img src="../../../assets/graphics/game-radar-logo-alt-straight-40px.png" alt="Game-Radar Logo" class="logo">
+
+  <object type="image/svg+xml" data="../../../assets/graphics/game-radar-logo-tilted-interactive.svg" class="logo">
+    Game-Radar Logo
+  </object>
 
   <nav mat-tab-nav-bar>
     <a mat-tab-link *ngFor="let item of tabNavItems"
