--- a/frontend/src/app/components/setup-page/setup-page.component.html
+++ b/frontend/src/app/components/setup-page/setup-page.component.html
@@ -1,5 +1,5 @@
-<div fxLayoutAlign="center center" class="login-background full-page" xmlns="http://www.w3.org/1999/html">
-  <mat-card id="login-card" fxLayout="column" fxLayoutAlign="center center">
+<div fxLayoutAlign="center center" class="setup-background full-page" xmlns="http://www.w3.org/1999/html">
+  <mat-card id="setup-card" fxLayout="column" fxLayoutAlign="center center">
 
     <mat-card-header>
       <mat-card-title>Hello there!</mat-card-title>
