--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -1,10 +1,9 @@
-$header-height: 64px;
-
 .menu-item-icon {
   margin-right: 10px;
 }
 
 .logo {
+  width: 45px;
   padding-right: 30px;
   padding-left: 30px;
 }
@@ -14,7 +13,7 @@ $header-height: 64px;
 }
 
 .mat-tab-nav-bar, .mat-tab-links, .mat-tab-link {
-  height: $header-height;
+  height: 64px;
   user-select: none;
 }
 
