--- a/frontend/src/app/theme/default-theme.scss
+++ b/frontend/src/app/theme/default-theme.scss
@@ -7,6 +7,12 @@ $custom-theme-primary: mat.define-palette(mat.$green-palette);
 $custom-theme-accent: mat.define-palette(mat.$grey-palette, A200, A100, A400);
 $custom-theme-warn: mat.define-palette(mat.$red-palette);
 
-$custom-theme: mat.define-dark-theme($custom-theme-primary, $custom-theme-accent, $custom-theme-warn);
+$custom-theme: mat.define-dark-theme((
+  color: (
+    primary: $custom-theme-primary,
+    accent: $custom-theme-accent,
+    warn: $custom-theme-warn
+  )
+));
 
 @include mat.all-component-themes($custom-theme);
